# jsd-tpc-poco-cpp

./: CMakeLists.txt  LICENSE  README.md
0-tpc-cmake/: tpc-poco-foundation-set-compiler-settings.cmake  tpc-poco-json-set-compiler-settings.cmake  tpc-poco-seven-zip-set-compiler-settings.cmake  tpc-poco-util-set-compiler-settings.cmake  tpc-poco-xml-set-compiler-settings.cmake  tpc-poco-zip-set-compiler-settings.cmake
0-tpc-cmake/compiler-settings/: tpc-poco-common-set-linux-compiler-settings.cmake  tpc-poco-common-set-windows-compiler-settings.cmake  tpc-poco-foundation-set-linux-compiler-settings.cmake  tpc-poco-json-set-linux-compiler-settings.cmake  tpc-poco-seven-zip-set-linux-compiler-settings.cmake  tpc-poco-seven-zip-set-windows-compiler-settings.cmake  tpc-poco-util-set-linux-compiler-settings.cmake  tpc-poco-xml-set-linux-compiler-settings.cmake  tpc-poco-zip-set-linux-compiler-settings.cmake
0-tpc-cmake/functions-and-macroses/: tpc-poco-functions-and-macroses.cmake  tpc-poco-functions.cmake
2-tpc-poco-foundation/: CMakeLists.txt
3-tpc-poco-json/: CMakeLists.txt
4-tpc-poco-xml/: CMakeLists.txt
5-tpc-poco-util/: CMakeLists.txt
6-tpc-poco-zip/: CMakeLists.txt
7-tpc-poco-seven-zip/: CMakeLists.txt
